faster implementation because of using hashmap